--- a/wwwAdrian/css/registreStyles.css
+++ b/wwwAdrian/css/registreStyles.css
@@ -30,3 +30,15 @@
 .errors{
     color: red;
 }
+
+#navMenu{
+    margin-left: 40%;
+    background-color: grey;
+    width: 22%;
+    
+}
+
+#navItem{
+    background-color: lightgray;
+    border: solid 1px;
+}
